# GammaRay_Spectroscopy

./: ActionInitialization.cc  ActionInitialization.hh  CMakeLists.txt  Physicslists.cc  Physicslists.hh  README.md  construct.cc  construct.hh  particle.cc  particle.hh  runAction.cc  runAction.hh  sensDet.cc  sensDet.hh  sim.cc
scripts/: run.mac  vis.mac
